--- a/custom_recognizers.yaml
+++ b/custom_recognizers.yaml
@@ -1,7 +1,83 @@
 recognizers:
-  - entity: "FR_CONTRACT_NUMBER"
+  # SIRET - Système d'Identification du Répertoire des ETablissements (14 chiffres)
+  - entity: "FR_SIRET"
+    patterns:
+      - name: "siret_pattern"
+        regex: "\\b\\d{3}\\s?\\d{3}\\s?\\d{3}\\s?\\d{5}\\b|\\b\\d{14}\\b"
+        score: 0.95
+    context: ["siret", "SIRET"]
+
+  # SIREN - Système d'Identification du Répertoire des Entreprises (9 chiffres)
+  - entity: "FR_SIREN"
+    patterns:
+      - name: "siren_pattern"
+        regex: "\\b\\d{3}\\s?\\d{3}\\s?\\d{3}\\b|SIREN[:\\s]+\\d{9}"
+        score: 0.95
+    context: ["siren", "SIREN", "entreprise"]
+
+  # Numéro de facture - formats courants
+  - entity: "INVOICE_NUMBER"
+    patterns:
+      - name: "invoice_number_standard"
+        regex: "(?:Facture|N°\\s?Facture|Fact)[:\\s#]*([A-Z]?\\d{4,8})"
+        score: 0.9
+      - name: "invoice_number_pattern"
+        regex: "\\b(?:FACT|INV)-?\\d{6,8}\\b"
+        score: 0.85
+    context: ["facture", "numéro", "n°"]
+
+  # Numéro de client
+  - entity: "CLIENT_NUMBER"
+    patterns:
+      - name: "client_number"
+        regex: "(?:Client|No\\s?Client)[:\\s#]*([A-Z]?\\d{4,8})"
+        score: 0.85
+    context: ["client", "numéro"]
+
+  # IBAN - International Bank Account Number
+  - entity: "IBAN"
+    patterns:
+      - name: "iban_pattern"
+        regex: "\\bFR\\d{2}\\s?\\d{4}\\s?\\d{4}\\s?\\d{4}\\s?\\d{4}\\s?\\d{3}\\b|\\bFR\\d{27}\\b"
+        score: 0.95
+    context: ["iban", "compte", "bancaire"]
+
+  # BIC - Bank Identifier Code
+  - entity: "BIC"
+    patterns:
+      - name: "bic_pattern"
+        regex: "\\b[A-Z]{4}FR[A-Z0-9]{2}[A-Z0-9]{3}\\b"
+        score: 0.9
+    context: ["bic", "swift", "code"]
+
+  # Numéro de TVA intracommunautaire français
+  - entity: "FR_VAT_NUMBER"
+    patterns:
+      - name: "fr_vat_pattern"
+        regex: "FR\\s?\\d{2}\\s?\\d{3}\\s?\\d{3}\\s?\\d{3}|N°?\\s?TVA[:\\s]+FR\\d{11}"
+        score: 0.95
+    context: ["tva", "TVA", "intracommunautaire"]
+
+  # Numéro de sécurité sociale français (13 chiffres)
+  - entity: "FR_SOCIAL_SECURITY"
+    patterns:
+      - name: "social_security"
+        regex: "\\b\\d\\s?\\d{2}\\s?\\d{2}\\s?\\d{2}\\s?\\d{3}\\s?\\d{3}\\s?\\d{2}\\b|\\b\\d{13}\\b"
+        score: 0.9
+    context: ["sécurité sociale", "SS", "numéro"]
+
+  # Numéro de contrat
+  - entity: "CONTRACT_NUMBER"
     patterns:
       - name: "contract_number"
-        regex: "CN-\\d{6}"
+        regex: "CN-\\d{6}|CONT-\\d{6,8}|N°?\\s?Contrat\\s+\\d{6,8}"
         score: 0.9
-    context: ["contrat", "numéro"]
+    context: ["contrat", "numéro", "contract"]
+
+  # Numéro de devis
+  - entity: "QUOTATION_NUMBER"
+    patterns:
+      - name: "quotation_number"
+        regex: "(?:Devis|Estimation)[:\\s#]*([A-Z]?\\d{4,8})|\\b(?:DEVIS|ESTIM)-?\\d{6,8}\\b"
+        score: 0.85
+    context: ["devis", "estimation", "quotation"]
